@@ -1,0 +1,121 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+<!--
+ Licensed to the Apache Software Foundation (ASF) under one or more
+ contributor license agreements.  See the NOTICE file distributed with
+ this work for additional information regarding copyright ownership.
+ The ASF licenses this file to You under the Apache License, Version 2.0
+ (the "License"); you may not use this file except in compliance with
+ the License.  You may obtain a copy of the License at
+
+     http://www.apache.org/licenses/LICENSE-2.0
+
+ Unless required by applicable law or agreed to in writing, software
+ distributed under the License is distributed on an "AS IS" BASIS,
+ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ See the License for the specific language governing permissions and
+ limitations under the License.
+-->
+
+<!-- this schema file is used by SchemaVersionSpecificBehaviorTest with the 
+     env variable set to various values to test that the appropriate default
+     behaviors are obeyed.
+ -->
+<schema name="version-behavior" version="${solr.schema.test.ver}">
+
+  <types>
+    <!-- all behavior is default -->
+    <fieldType name="text" class="solr.TextField"/>
+    <fieldType name="bool" class="solr.BoolField"/>
+    <fieldType name="str" class="solr.StrField"/>
+
+    <!-- explicit props on type -->
+    <fieldType name="multi_f" class="solr.StrField" multiValued="false"/>
+    <fieldType name="multi_t" class="solr.StrField" multiValued="true"/>
+
+    <fieldType name="strnorm_f" class="solr.StrField" omitNorms="false"/>
+    <fieldType name="strnorm_t" class="solr.StrField" omitNorms="true"/>
+    <fieldType name="txtnorm_f" class="solr.TextField" omitNorms="false"/>
+    <fieldType name="txtnorm_t" class="solr.TextField" omitNorms="true"/>
+
+    <fieldType name="strTfP_f" class="solr.StrField" omitTermFreqAndPositions="false"/>
+    <fieldType name="strTfP_t" class="solr.StrField" omitTermFreqAndPositions="true"/>
+    <fieldType name="txtTfP_f" class="solr.TextField" omitTermFreqAndPositions="false"/>
+    <fieldType name="txtTfP_t" class="solr.TextField" omitTermFreqAndPositions="true"/>
+
+    <fieldType name="txt_phrase_f" class="solr.TextField" 
+               autoGeneratePhraseQueries="false"/>
+    <fieldType name="txt_phrase_t" class="solr.TextField"
+               autoGeneratePhraseQueries="true" />
+
+  </types>
+  <fields>
+
+    <!-- all behavior is default -->
+
+    <field name="text" type="text" />
+    <field name="bool" type="bool" />
+    <field name="str" type="str" />
+
+    <dynamicField name="*_dyn_text" type="text" />
+    <dynamicField name="*_dyn_bool" type="bool" />
+    <dynamicField name="*_dyn_str" type="str" />
+
+    <!-- explicit props on type -->
+    <field name="ft_multi_f" type="multi_f" />
+    <field name="ft_multi_t" type="multi_t" />
+    <dynamicField name="*_dyn_str_ft_multi_f" type="multi_f" />
+    <dynamicField name="*_dyn_str_ft_multi_t" type="multi_t" />
+
+    <field name="ft_strnorm_f" type="strnorm_f" />
+    <field name="ft_strnorm_t" type="strnorm_t" />
+    <dynamicField name="*_dyn_ft_strnorm_f" type="strnorm_f" />
+    <dynamicField name="*_dyn_ft_strnorm_t" type="strnorm_t" />
+
+    <field name="ft_txtnorm_f" type="txtnorm_f" />
+    <field name="ft_txtnorm_t" type="txtnorm_t" />
+    <dynamicField name="*_dyn_ft_txtnorm_f" type="txtnorm_f" />
+    <dynamicField name="*_dyn_ft_txtnorm_t" type="txtnorm_t" />
+
+    <field name="ft_strTfP_f" type="strTfP_f" />
+    <field name="ft_strTfP_t" type="strTfP_t" />
+    <dynamicField name="*_dyn_ft_strTfP_f" type="strTfP_f" />
+    <dynamicField name="*_dyn_ft_strTfP_t" type="strTfP_t" />
+
+    <field name="ft_txtTfP_f" type="txtTfP_f" />
+    <field name="ft_txtTfP_t" type="txtTfP_t" />
+    <dynamicField name="*_dyn_ft_txtTfP_f" type="txtTfP_f" />
+    <dynamicField name="*_dyn_ft_txtTfP_t" type="txtTfP_t" />
+
+    <field name="ft_txt_phrase_f" type="txt_phrase_f" />
+    <field name="ft_txt_phrase_t" type="txt_phrase_t" />
+    <dynamicField name="*_dyn_ft_txt_phrase_f" type="txt_phrase_f" />
+    <dynamicField name="*_dyn_ft_txt_phrase_t" type="txt_phrase_t" />
+    
+    <!-- explicit props on field -->
+    <field name="multi_f" type="str" multiValued="false" />
+    <field name="multi_t" type="str" multiValued="true" />
+    <dynamicField name="*_dyn_str_multi_f" type="str" multiValued="false" />
+    <dynamicField name="*_dyn_str_multi_t" type="str" multiValued="true" />
+
+    <field name="strnorm_f" type="str" omitNorms="false" />
+    <field name="strnorm_t" type="str" omitNorms="true" />
+    <dynamicField name="*_dyn_strnorm_f" type="str" omitNorms="false" />
+    <dynamicField name="*_dyn_strnorm_t" type="str" omitNorms="true" />
+
+    <field name="txtnorm_f" type="text" omitNorms="false" />
+    <field name="txtnorm_t" type="text" omitNorms="true" />
+    <dynamicField name="*_dyn_txtnorm_f" type="text" omitNorms="false" />
+    <dynamicField name="*_dyn_txtnorm_t" type="text" omitNorms="true" />
+
+    <field name="strTfP_f" type="str" omitTermFreqAndPositions="false" />
+    <field name="strTfP_t" type="str" omitTermFreqAndPositions="true" />
+    <dynamicField name="*_dyn_strTfP_f" type="str" omitTermFreqAndPositions="false" />
+    <dynamicField name="*_dyn_strTfP_t" type="str" omitTermFreqAndPositions="true" />
+
+    <field name="txtTfP_f" type="text" omitTermFreqAndPositions="false" />
+    <field name="txtTfP_t" type="text" omitTermFreqAndPositions="true" />
+    <dynamicField name="*_dyn_txtTfP_f" type="text" omitTermFreqAndPositions="false" />
+    <dynamicField name="*_dyn_txtTfP_t" type="text" omitTermFreqAndPositions="true" />
+
+  </fields>
+</schema>
